# dbus-sharp-glib

./: .gitignore  Makefile  Makefile.am  NDesk.DBus.GLib.sln  README  configure.ac  dbus-sharp-glib-1.0.pc.in  dbus-sharp-glib-2.0.pc.in  dbus-sharp-glib.sln  ndesk-dbus-glib-1.0.pc.in
examples/: GtkDemo.csproj  Makefile  Makefile.am  Test.cs  TestExport.cs  TestSystemBus.cs  TestThreads.cs  TestUI.cs
glib/: AssemblyInfo.cs  GIO.cs  GLib.IO.cs  GLib.cs  Makefile  Test.cs  TestExport.cs  TestGlib.cs  TestSystemBus.cs  TestUI.cs
src/: AssemblyInfo.cs.in  GLib.IO.cs  GLib.cs  Makefile  Makefile.am  NDesk.DBus.GLib.csproj  dbus-sharp-glib.csproj
