SUBDIRS = src examples

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = ndesk-dbus-glib-1.0.pc

EXTRA_DIST = \
	ndesk-dbus-glib-1.0.pc.in \
	ndesk.snk

DISTCLEANFILES = \
	ndesk-dbus-glib-1.0.pc

MAINTAINERCLEANFILES = \
	INSTALL \
	Makefile.in \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	install-sh \
	missing

