SUBDIRS = src examples

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = dbus-sharp-glib-1.0.pc

EXTRA_DIST = \
	dbus-sharp-glib-1.0.pc.in \
	dbus-sharp.snk

DISTCLEANFILES = \
	dbus-sharp-glib-1.0.pc

MAINTAINERCLEANFILES = \
	INSTALL \
	Makefile.in \
	aclocal.m4 \
	config.guess \
	config.sub \
	configure \
	install-sh \
	missing

